--- a/api-cripto/index.html
+++ b/api-cripto/index.html
@@ -4,13 +4,34 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CoinMarketCap</title>
+	<title>Criptomoeadas</title>
 </head>
 <body>
+	<header>
+		<h1>Criptomoedas</h1>
+	</header>
+	<main>
+		<section class="intro">
+			<h2>O que é uma criptomoeda</h2>
+			<p>Uma <strong>criptomoeda</strong> ou <strong>cibermoeda</strong> é um meio de troca, podendo ser centralizado ou descentralizado que se utiliza da tecnologia de blockchain e da criptografia para assegurar a validade das transações e a criação de novas unidades da moeda. O Bitcoin, foi a primeira criptomoeda descentralizada criada e, desde então, muitas outras criptomoedas foram criadas.</p>
+			<p>Origem: <a href="https://pt.wikipedia.org/wiki/Criptomoeda">Wikepédia</a>, a enciclopédia livre.</p>
+		</section>
+
+		<section class="coins">
+			<h2>Criptomoeadas</h2>
+			<p>Utilizando a API da <a href="https://coinmarketcap.com">Coin Market Cap</a> vamos exibir algumas criptomoedas.</p>
+
+			<table data-js="coins-table">
+				<tbody></tbody>
+			</table>
+		</section>
+
+		
+	</main>
 	<script type="text/javascript">
 		// My API key
 		var apikey = {
-			key: 'SUA API VEM AQUI :)'
+			key: '247bba66-c74a-4472-8e6b-217647925d4b'
 		}
 		// GET fetch requisition
 		fetch('https://pro-api.coinmarketcap.com/v1/cryptocurrency/map?CMC_PRO_API_KEY=' + apikey.key)
@@ -20,6 +41,12 @@
 			})
 			.then((api) => {
 				console.log(api)
+				
+				for (let i = 0; i < 10; i++) {
+					let name = api.data[i].name
+					let symbol = api.data[i].symbol
+					let first_historical_data = api.data[i].first_historical_data
+				}
 			})
 			.catch((error) => {
 				console.error(error.message)
