--- a/api-cripto/index.html
+++ b/api-cripto/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="style.css">
 	<title>Criptomoeadas</title>
 </head>
@@ -13,6 +14,7 @@
 			<h1>Criptomoedas</h1>
 		</div>
 	</header>
+	
 	<main>
 		<div class="wrapper">
 			<section class="section">
@@ -28,6 +30,18 @@
 			</section>
 		</div>
 	</main>
+	
+	<footer class="footer">
+		<div class="wrapper-footer">
+			<p>Desenvolvido por Eden Paulo Cruz</p>
+			<ul class="social-list">
+				<li class="social-item"><a href="https://github.com/edenpaulocruz" target="_blank"><span class="bi bi-github" aria-hidden="true"></span></a></li>
+				<li class="social-item"><a href="https://linkedin.com/in/edenpaulocruz" target="_blank"><span class="bi bi-linkedin" aria-hidden="true"></a></li>
+				<li class="social-item"><a href="https://twitter.com/edenpaulocruz" target="_blank"><span class="bi bi-twitter" aria-hidden="true"></a></li>
+			</ul>
+		</div>
+	</footer>
+	
 	<script src="script.js"></script>
 </body>
 </html>
