--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <main class="main">
     <div class="wrapper">
-      <div class="dino"></div>
+      <div class="dino" data-js="dino"></div>
     </div>
   </main>
   <script src="script.js"></script>
