Fazendo aparecer os cactus

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Dino Game</h1>
     </div>
   </header>
-  <main class="main">
+  <main class="main" data-js="main">
     <div class="wrapper">
       <div class="dino" data-js="dino"></div>
     </div>
